# Chatbot-FastAPI

./: README.md  main.py  pyproject.toml
api_routers/: chat.py  upload.py
cli/: chatbot_cli.py
core/: config.py
